# SMK_BOT

./: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  TESTING.md  docker-compose.yml  pyproject.toml
app/: __main__.py  config.py  main.py
app/bot/: dispatcher.py  lead_sender.py  states.py
app/bot/handlers/: admins.py  chats.py  errors.py  import_export.py  settings.py  start.py  status.py  words.py
app/bot/keyboards/: admins.py  chats.py  common.py  main_menu.py  words.py
app/bot/middlewares/: access.py  throttle.py
app/core/: bus.py  extractors.py  lead.py  matcher.py  normalizer.py
app/db/: base.py  models.py  repo.py
app/userbot/: chat_ops.py  client.py  floodwait.py  listener.py
app/utils/: heartbeat.py  logger.py
migrations/: env.py
migrations/versions/: 0001_initial.py
scripts/: backup.sh  seed_test_data.py
tests/: test_extractors.py  test_matcher.py  test_normalizer.py
tests/fixtures/: sample_messages.py
