[project]
name = "smk-bot"
version = "0.1.0"
description = "Telegram lead-gen bot for SMK-STANDARD: Telethon listener + aiogram admin/delivery"
requires-python = ">=3.11,<3.13"
dependencies = [
    "aiogram>=3.13,<4.0",
    "telethon>=1.36,<2.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "pyahocorasick>=2.1,<3.0",
    "python-dotenv>=1.0,<2.0",
    "cryptg>=0.4,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.11,<2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
